[tool.poetry]
name = "memory-service"
version = "0.1.0"
description = "Memory service for The Tree service"
authors = ["SigningOwl <whddms1208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
